--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,29 +7,29 @@ driver:
     name: virtualbox
 lint:
   name: yamllint
+
 platforms:
-  - name: ubuntu
-    box: bento/ubuntu-16.04
-    groups:
-      - linux
 
   - name: centos
     box: bento/centos-7.4
     groups:
       - linux
 
-  - name: vagrant-10
-    box: windows-10-iot-ru-chef12
+  - name: vagrant-2012r2
+    box: opentable/win-2012r2-standard-amd64-nocm
     memory: 2048
+    instance_raw_config_args:
+      - "vm.synced_folder './', '/vagrant', :mount_options => ['ro']"
+
 provisioner:
   name: ansible
   inventory:
     host_vars:
-      vagrant-10:
+      vagrant-2012r2:
         ansible_become: false
         ansible_user: vagrant
         ansible_password: vagrant
-        ansible_port: 5985
+        ansible_port: 55985
         ansible_host: 127.0.0.1
         ansible_connection: winrm
         ansible_winrm_scheme: http
@@ -39,12 +39,15 @@ provisioner:
         ansible_become: true
   lint:
     name: ansible-lint
+
 scenario:
   name: default
   converge_sequence:
     - create
     - converge
+
 verifier:
   name: testinfra
   lint:
     name: flake8
+    
