--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -1,6 +1,5 @@
 ---
-# tasks file for ansible-role-molecule-linux-windows
-
+# tasks file for molecule-vagrant
 - name: Ensure configuration file is present
   template:
     src: foo.conf.j2
