--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-# handlers file for ansible-role-molecule-linux-windows
+# handlers file for molecule-vagrant
 
 - name: restart foo
   service:
