--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -40,7 +40,8 @@
           'address': "{{ item.HostName }}",
           'user': "{{ item.User }}",
           'port': "{{ item.Port }}",
-          'identity_file': "{{ item.IdentityFile }}", }
+          'identity_file': "{{ item.IdentityFile }}",
+        }
       with_items: "{{ server.results }}"
       register: instance_config_dict
       when: server.changed | bool
